# video-sweep

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
src/video_sweep/: __init__.py  __main__.py  classifier.py  cli.py  finder.py  omdb.py  renamer.py  utils.py
src/video_sweep.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_classifier.py  test_cli.py  test_finder.py  test_finder_extra.py  test_omdb.py  test_omdb_cov.py  test_omdb_extra.py  test_omdb_unit.py  test_renamer.py  test_renamer_unit.py  test_utils.py
