[project]
name = "video-sweep"
version = "0.4.0"
description = "Minimal CLI tool to find, classify, rename, and move video files."
	authors = [{ name = "Colin Brown", email = "colinmakerofthings@gmail.com" }]
[project.license]
text = "MIT"
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
	"tomli; python_version < '3.11'",
	"requests",
	"toml",
	"rich"
]

[project.scripts]
video-sweep = "video_sweep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "black==24.3.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in test files
